# daniel-crawl-web

./: .gitignore  README.md  articles.db  main.py  pyproject.toml  vercel.json
backend/: articles.db  bulk_import.py  db.py  db_populate_summaries.py  render.yaml  requirements.txt  scraper.py  summarizer.py
backend/api/: index.py
frontend/: index.html  script.js  style.css  vercel.json
templates/: index.html
